--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,14 @@ body {
     font-size: 16px;
     overflow: hidden;
 }
+
+header {
+    position: fixed;
+    width: 90vw;
+    top: 0;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 3;
+}
