--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,9 @@ header nav ul {
     display: flex;
     gap: 48px;
 }
+
+header nav ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 5px 0;
+}
