--- a/styles.css
+++ b/styles.css
@@ -51,4 +51,9 @@ header nav ul li::after {
     width: 0;
     height: 2px;
     background-color: #00f7ff;
+    transition: width 0.3s ease;
+}
+
+header nav ul li:hover::after {
+    width: 100%;
 }
