--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,9 @@ header nav ul li:hover::after {
     position: relative;
     z-index: 2;
 }
+
+.product-img img {
+    max-width: 80%;
+    max-height: 60%;
+    filter: drop-shadow(0 0 30px rgba(0, 247, 255, 0.3));
+}
