--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,10 @@ header nav ul li:hover::after {
     letter-spacing: 2PX;
     margin-bottom: 10px;
 }
+
+.product-name {
+    font-size: 4.5rem;
+    font-family: "Orbitron", sans-serif;
+    line-height: 1.1;
+    margin-bottom: 20px;
+}
