--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,14 @@ header nav ul li:hover::after {
     margin-bottom: 30px;
     max-width: 600px;
 }
+
+.btn {
+    padding: 12px 16px;
+    background: linear-gradient(90deg, #00f7ff, #0066ff);
+    border-radius: 30px;
+    color: #000;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+}
