--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,10 @@ header nav ul li:hover::after {
     gap: 15px;
     z-index: 5;
 }
+
+.numbers {
+    font-family: "Orbitron", sans-serif;
+    font-size: 3rem;
+    font-weight: 800;
+    color: rgba(255, 255, 255, 0.2  );
+}
