--- a/styles.css
+++ b/styles.css
@@ -105,10 +105,16 @@ header nav ul li:hover::after {
     justify-content: center;
     align-items: center;
     opacity: 0;
+
+    /* Animação */
+
+    transform: translateX(100vw);
+    transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .active {
     opacity: 1;
+    transform: translate(0);
 }
 
 .product-img {
@@ -125,7 +131,21 @@ header nav ul li:hover::after {
     max-width: 80%;
     max-height: 60%;
     filter: drop-shadow(0 0 30px rgba(0, 247, 255, 0.3));
+
+    /* Animação */
+
+    transform: translateX(200px);
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
+    opacity: 0;
+    
 }
+
+.active .product-img img{
+    transform: translateX(0);
+    opacity: 1;
+}
+
 
 .content {
     width: 55%;
@@ -144,13 +164,40 @@ header nav ul li:hover::after {
     font-weight: 600;
     letter-spacing: 2PX;
     margin-bottom: 10px;
+
+    /* Animação */
+
+    transform: translateX(200px);
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
+    opacity: 0;
+        
+}
+    
+.active .product-tag {
+    transform: translateX(0);
+    opacity: 1;
+   
 }
 
 .product-name {
     font-size: 4.5rem;
-    font-family: "Orbitron", sans-serif;
-    line-height: 1.1;
-    margin-bottom: 20px;
+        font-family: "Orbitron", sans-serif;
+        line-height: 1.1;
+        margin-bottom: 20px;
+    
+        /* Animação */
+    
+        transform: translateX(200px);
+        transition: transform 0.6s ease, opacity 0.6s ease;
+        transition-delay: 0.5s;
+        opacity: 0;
+    
+    }
+    
+.active .product-name {
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .deescription {
@@ -159,6 +206,20 @@ header nav ul li:hover::after {
     line-height: 1.6;
     margin-bottom: 30px;
     max-width: 600px;
+
+    /* Animação */
+
+    transform: translateX(200px);
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
+    opacity: 0;
+        
+}
+
+.active .deescription {
+    transform: translateX(0);
+    opacity: 1;
+    
 }
 
 .btn {
@@ -170,6 +231,20 @@ header nav ul li:hover::after {
     font-weight: 600;
     cursor: pointer;
     border: none;
+
+    /* Animação */
+
+    transform: translateX(200px);
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
+    opacity: 0;
+        
+    }
+    
+.active .btn {
+    transform: translateX(0);
+    opacity: 1;
+    
 }
 
 .arrows {
